swagger documentation for product controller
